# telegram-bot-webhooks

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
src/: bot.py  config_reader.py  logger.py
src/utils/: message_texts.py  tracker.py
