[tool.poetry]
name = "telegram-bot-webhooks"
package-mode = false
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
aiogram = "^3.4.1"
pydantic-settings = "^2.2.1"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
